@@ -29,6 +29,7 @@
   - Added authortest target for author tests.
   - Fix some set validation errors. BZ #673402
   - Purge Site statistics, site tech and HTML site map.
+  - Truncate PO Fuzzy/Un-transtaled message, added PO line number.
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
